fixed textbox on mobile

--- a/styles.css
+++ b/styles.css
@@ -507,7 +507,6 @@ body {
 
 #message {
   height: 12rem;
-  min-width: 16rem;
   resize: none;
 }
 
